--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
         "mime": "1.3.4",
         "mongoose": "5.0.4",
         "mz": "2.4.0",
-        "nunjucks": "2.4.2"
+        "nunjucks": "2.4.2",
+        "koa-jwt": "^3.3.0",
+        "jsonwebtoken": "^7.4.1"
     }
 }
