--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,11 @@
         "mz": "2.4.0",
         "nunjucks": "2.4.2",
         "koa-jwt": "^3.3.0",
-        "jsonwebtoken": "^7.4.1"
+        "jsonwebtoken": "^7.4.1",
+        "ipa-extract-info": "^1.2.3",
+        "apk-parser3": "^0.1.7",
+        "adm-zip": "^0.4.7",
+        "koa-body": "^2.5.0",
+        "uuid": "^3.0.1"
     }
 }
