--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
     "description": "Hello Koa 2 example with async",
     "main": "app.js",
     "scripts": {
-        "start": "babel-node index.js"
+        "start": "babel-node index.js",
+        "build": "babel src -d dist --source-maps",
+        "preLaunchTask": "npm run build",
+        "debug": "babel-node index.js --inspect --debug-brk --nolazy index.js"
     },
     "keywords": [
         "koa",
@@ -47,5 +50,6 @@
         "eslint-plugin-promise": "^3.7.0",
         "eslint-plugin-standard": "^3.0.1",
         "mocha": "^5.0.1"
+        
     }
 }
