--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "axios": "^0.17.1",
     "element-ui": "^2.1.0",
+    "fs": "^0.0.1-security",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vux": "^2.8.0",
     "vux-loader": "^1.2.1",
-    "less-loader": "^4.1.0"
+    "ipa-extract-info": "^1.2.3",
+    "apk-parser3": "^0.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
