邮件发送接口

--- a/server/package.json
+++ b/server/package.json
@@ -38,7 +38,8 @@
         "uuid": "^3.2.1",
         "mime": "^2.2.0",
         "fawn": "^2.1.5",
-        "bcrypt": "^1.0.3"
+        "bcrypt": "^1.0.3",
+        "nodemailer": "^4.6.3"
     },
     "devDependencies": {
         "babel-cli": "^6.24.1",
