--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,8 @@
         "mime": "^2.2.0",
         "fawn": "^2.1.5",
         "bcrypt": "^1.0.3",
-        "nodemailer": "^4.6.3"
+        "nodemailer": "^4.6.3",
+        "ipa-metadata": "^1.4.0"
     },
     "devDependencies": {
         "babel-cli": "^6.24.1",
