--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,8 @@
         "fawn": "^2.1.5",
         "bcrypt": "^1.0.3",
         "nodemailer": "^4.6.3",
-        "ipa-metadata": "^1.4.0"
+        "ipa-metadata": "^1.4.0",
+        "nunjucks": "^2.4.2"
     },
     "devDependencies": {
         "babel-cli": "^6.24.1",
