--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,18 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "apk-parser3": "^0.1.7",
     "axios": "^0.17.1",
     "element-ui": "^2.1.0",
     "fs": "^0.0.1-security",
+    "ipa-extract-info": "^1.2.3",
     "less-loader": "^4.1.0",
     "vue": "^2.5.2",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-lazyload": "^1.1.4",
     "vue-router": "^3.0.1",
     "vux": "^2.8.0",
-    "vux-loader": "^1.2.1",
-    "ipa-extract-info": "^1.2.3",
-    "apk-parser3": "^0.1.7",
-    "vue-lazyload": "^1.1.4"
+    "vux-loader": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
