--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hello-koa2",
+    "name": "fabu",
     "version": "1.0.0",
     "description": "Hello Koa 2 example with async",
     "main": "index.js",
