--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,7 @@
         "uuid": "^3.2.1",
         "mime": "^2.2.0",
         "fawn": "^2.1.5",
-        "bcrypt": "^1.0.3",
+        "bcrypt": "1.0.3",
         "nodemailer": "^4.6.3",
         "ipa-metadata": "^1.4.0",
         "mustache": "^2.3.0"
