--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
         "koa-router": "7.0.0",
         "koa-multer": "^1.0.2",
         "koa-static": "^4.0.2",
+        "koa-mount": "^3.0.0",
         "bunyan": "^1.8.12",
         "mongoose": "5.0.4",
         "koa-jwt": "^3.3.0",
