--- a/fabu_nginx.conf
+++ b/fabu_nginx.conf
@@ -29,3 +29,11 @@ server{
   }
   client_max_body_size 208M; 
 }
+
+server{
+  listen 80;
+  server_name wiki.fabu.love;
+  
+  root /home/ubuntu/fabulove/wiki/_book;
+  index index.html;
+}
