--- a/fabu_nginx.conf
+++ b/fabu_nginx.conf
@@ -15,12 +15,13 @@ server{
       rewrite ^.*$ /index.html last;
   }
 
-  #location ~ /.+/icon 
-   # {
-#proxy_pass http://127.0.0.1:8080;
-#    proxy_set_header Host $host;
-#    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#    } 
+  location /upload/ {
+      #该目录为根目录下config文件里配置的文件上传目录
+      #或者使用node app config 配置的updateDir
+      root /home/ubuntu/fabulove/upload
+      expires  30d;
+  }
+
 
   location /api/ {
     proxy_pass http://127.0.0.1:8383;
