--- a/server/templates/template.plist
+++ b/server/templates/template.plist
@@ -12,7 +12,18 @@
 					<string>software-package</string>
 					<key>url</key>
           <string>{{{ downloadUrl }}}</string>
+					<key>md5-size</key>
+          <integer>{{{ fileSize }}}</integer>
 				</dict>
+				 <dict>
+         <key>kind</key>
+         <string>display-image</string>
+         <!-- optional. indicates if icon needs shine effect applied. -->
+         <key>needs-shine</key>
+         <true/>
+         <key>url</key>
+         <string>{{{ iconUrl }}}</string>
+        </dict>
 			</array>
 			<key>metadata</key>
 			<dict>
