添加配置说明

--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "vue-lazyload": "^1.1.4",
     "vue-qr": "^1.2.8",
     "vue-router": "^3.0.1",
-    "vue-context-menu": "^2.0.6"
+    "vue-context-menu": "^2.0.6",
+    "vue-infinite-scroll":"^2.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
