--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"url":"http://127.0.0.1:9898","port":"9898","secret":"ABCD-Aa71-fdEF-72C2-XXXX","dir":"/Volumes/UserData/ProjectSource/NodeProject/upload"}
+{"port":"9898","secret":"ABCD-Aa71-fdEF-72C2-XXXX","dir":"/Volumes/UserData/ProjectSource/NodeProject/upload"}
