--- a/docker/app-publisher.conf
+++ b/docker/app-publisher.conf
@@ -2,6 +2,8 @@ server{
   listen 80;
   server_name localhost;
 
+  access_log  /opt/nginx/logs/app.access.log  main;
+
   #root目录为项目根目录的client/dist目录下
   root /opt/web;
   index index.html;
