server dockerfile from node:9.11.2-alpine [change repo]

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,4 +16,5 @@ ADD docker/app-publisher.conf /etc/nginx/conf.d/default.conf
 EXPOSE 9898 80 443
 
 ENTRYPOINT ["pm2-docker", "start", "process.json"]
+STOPSIGNAL SIGTERM
 CMD ["nginx", "-g", "daemon off;"]
