server dockerfile from node:9.11.2-alpine [change repo]

--- a/docker/app-publisher.conf
+++ b/docker/app-publisher.conf
@@ -15,7 +15,7 @@ server{
 
   location /upload/ {
       #该root目录为根目录下config.json文件里dir目录
-      root /data
+      root /opt/data
       expires  30d;
   }
 
