server dockerfile from node:9.11.2-alpine [change repo]

--- a/docker/app-publisher.conf
+++ b/docker/app-publisher.conf
@@ -2,7 +2,7 @@ server{
   listen 80;
   server_name localhost;
 
-  access_log  /opt/nginx/logs/app.access.log  main;
+  access_log  /opt/logs/app.access.log  main;
 
   #root目录为项目根目录的client/dist目录下
   root /opt/web;
