server dockerfile from node:9.11.2-alpine [change repo]

--- a/docker/app-publisher.conf
+++ b/docker/app-publisher.conf
@@ -8,14 +8,9 @@ server{
   root /opt/web;
   index index.html;
 
-  location / {
-      try_files $uri $uri/ @router;
-      index index.html;
-  }
-
   location /upload/ {
       #该root目录为根目录下config.json文件里dir目录
-      root /opt/data
+      root /opt/data;
       expires  30d;
   }
 
@@ -29,4 +24,10 @@ server{
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
   client_max_body_size 208M; #最大上传的ipa/apk文件大小
+
+  location / {
+      try_files $uri $uri/ @router;
+      index index.html;
+  }
+
 }
