--- a/docker/app-publisher.conf
+++ b/docker/app-publisher.conf
@@ -1,6 +1,7 @@
 server{
   listen 80;
   server_name localhost;
+  set_by_lua_file $trace_id /etc/nginx/traceid.lua;
 
   access_log  /opt/logs/app.access.log  main;
 
