修复android5.0预览界面不显示问题

--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.1.0",
     "less-loader": "^4.1.0",
     "vue": "^2.5.2",
+    "vue-context-menu": "^2.0.6",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-lazyload": "^1.1.4",
     "vue-qr": "^1.2.8",
-    "vue-router": "^3.0.1",
-    "vue-context-menu": "^2.0.6",
-    "vue-infinite-scroll": "^2.0.2"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
