fix-#52 fix-#41 隐藏小程序入口

--- a/server/package.json
+++ b/server/package.json
@@ -41,11 +41,11 @@
         "fawn": "^2.1.5",
         "bcrypt": "^3.0.0",
         "nodemailer": "^4.6.3",
-        "ipa-metadata": "^1.4.0",
+        "ipa-metadata2": "^1.4.2",
         "mustache": "^2.3.0",
         "ldapjs": "^1.0.2",
         "etl": "^0.5.13",
-        "axios":"^0.18.0"
+        "axios": "^0.18.0"
     },
     "devDependencies": {
         "babel-cli": "^6.24.1",
