--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: mongo
     image: mongo
     volumes:
-      - ./data/db:/data/db
+      - ./data:/data/db
     ports:
       - "27017:27017"
 
