--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - ./data:/data/db
     ports:
       - "27017:27017"
+    networks:
+      appnet:
+        aliases:
+          - mongo
 
   server:
     build:
@@ -17,8 +21,15 @@ services:
       FABU_DB_HOST: mongo
     ports: 
       - "9898:9898"
+    networks:
+      appnet:
+        aliases:
+          - fabu-server
 
-  
+networks:
+  appnet:
+    driver:
+      bridge
 
 
   
