--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       dockerfile: docker/Dockerfile
     environment:
       FABU_DB_HOST: mongo
-      FABU_BASE_URL: https://fabu.apppills.com
+      # FABU_BASE_URL: https://fabu.apppills.com 正式环境部署请打开注释，并修改为域名为自己的域名
       FABU_UPLOAD_DIR: /fabu/upload
     ports: 
       - "9898:9898"
