--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,9 +5,13 @@ services:
     container_name: mongo
     image: mongo
     volumes:
-      - ./data/db:/data/db
+      - ./data:/data/db
     ports:
       - "27017:27017"
+    networks:
+      appnet:
+        aliases:
+          - mongo
 
   server:
     build:
@@ -17,8 +21,15 @@ services:
       FABU_DB_HOST: mongo
     ports: 
       - "9898:9898"
+    networks:
+      appnet:
+        aliases:
+          - fabu-server
 
-  
+networks:
+  appnet:
+    driver:
+      bridge
 
 
   
