--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
         "mongoose": "^5.4.19",
         "jsonwebtoken": "^8.5.0",
         "unzipper": "^0.9.3",
+        "unzip-stream": "^0.3.0",
         "lodash": "^4.17.4",
         "pm2": "^2.9.3",
         "uuid": "^3.2.1",
