--- a/server/package.json
+++ b/server/package.json
@@ -20,36 +20,37 @@
         "url": "https://github.com/michaelliao/learn-javascript.git"
     },
     "dependencies": {
-        "koa": "^2.4.1",
-        "koa-bodyparser": "^4.2.0",
-        "koa-cors": "0.0.16",
-        "koa-router": "7.0.0",
-        "koa-multer": "^1.0.2",
-        "koa-static": "^4.0.2",
-        "koa-mount": "^3.0.0",
-        "koa-jwt": "^3.3.0",
-        "koa-body": "^2.5.0",
-        "koa-compose": "^4.1.0",
-        "bunyan": "^1.8.12",
-        "mongoose": "^5.4.19",
-        "jsonwebtoken": "^8.5.0",
-        "unzipper": "^0.9.3",
-        "unzip-stream": "^0.3.0",
-        "lodash": "^4.17.4",
-        "pm2": "^2.9.3",
-        "uuid": "^3.2.1",
-        "mime": "^2.2.0",
-        "fawn": "^2.1.5",
-        "bcrypt": "^3.0.4",
-        "nodemailer": "^4.6.3",
-        "ipa-metadata2": "^1.4.2",
-        "mustache": "^2.3.0",
-        "ldapjs": "^1.0.2",
-        "etl": "^0.5.13",
+        "ali-oss": "^6.2.1",
+        "app-info-parser": "^0.2.3",
         "axios": "^0.18.0",
+        "bcrypt": "^3.0.4",
+        "bunyan": "^1.8.12",
+        "etl": "^0.5.13",
+        "fawn": "^2.1.5",
         "hoek": ">=4.2.1",
+        "ipa-metadata2": "^1.4.2",
+        "jsonwebtoken": "^8.5.0",
+        "koa": "^2.4.1",
+        "koa-body": "^2.5.0",
+        "koa-bodyparser": "^4.2.0",
+        "koa-compose": "^4.1.0",
+        "koa-cors": "0.0.16",
+        "koa-jwt": "^3.3.0",
+        "koa-mount": "^3.0.0",
+        "koa-multer": "^1.0.2",
+        "koa-router": "7.0.0",
+        "koa-static": "^4.0.2",
+        "ldapjs": "^1.0.2",
+        "lodash": "^4.17.4",
+        "mime": "^2.2.0",
+        "mongoose": "^5.4.19",
         "mpath": ">=0.5.1",
-        "app-info-parser": "^0.2.3"
+        "mustache": "^2.3.0",
+        "nodemailer": "^4.6.3",
+        "pm2": "^2.9.3",
+        "unzip-stream": "^0.3.0",
+        "unzipper": "^0.9.3",
+        "uuid": "^3.2.1"
     },
     "devDependencies": {
         "babel-cli": "^6.24.1",
@@ -58,6 +59,7 @@
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-preset-env": "^1.6.0",
         "chai": "^4.1.2",
+        "cross-env": "^6.0.3",
         "eslint": "^4.17.0",
         "eslint-config-airbnb": "^16.1.0",
         "eslint-config-google": "^0.9.1",
@@ -66,6 +68,7 @@
         "eslint-plugin-node": "^6.0.1",
         "eslint-plugin-promise": "^3.7.0",
         "eslint-plugin-standard": "^3.0.1",
+        "eslint-plugin-vue": "^6.0.1",
         "mocha": "^5.0.1"
     }
 }
