--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -4,20 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "type": "node",
-        "request": "launch",
-        "name": "Launch via NPM",
-        "runtimeExecutable": "npm",
-        "runtimeArgs": [
-            "run-script",
-            "debug"
-        ],
-        "port": 9229,
-        "skipFiles": [
-            "<node_internals>/**"
-        ]
-    },
         {
             "type": "node",
             "request": "launch",
@@ -25,11 +11,17 @@
             "runtimeExecutable": "npm",
             "runtimeArgs": [
                 "run",
-                "debug"
+                "debug",
+                "start"
             ],
             "port": 9229,
             "env": {
-                "NODE_ENV": "develop"
+                "NODE_ENV": "develop",
+                "FABU_OSS_REGION" : "oss-cn-beijing",
+                "FABU_OSS_ACCESS_KEY_ID" : "LTAIQ9BRV2rQOYls",
+                "FABU_OSS_ACCESS_KEY_SECRET" : "MnHuEJ59dzGv6JXdeLncgQB8DzJHBK",
+                "FABU_OSS_BUCKET" : "lhc-image",
+                "FABU_PATH_PREFIX" : "fabu.love"
             },
             "console": "internalConsole"
         }
