--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       FABU_DB_HOST: mongo
       # FABU_BASE_URL: https://fabu.apppills.com 正式环境部署请打开注释，并修改为域名为自己的域名
       FABU_UPLOAD_DIR: /fabu/upload
+    env_file:
+      - fabu.env
     ports: 
       - "9898:9898"
     volumes:
