--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,14 +12,16 @@ services:
       - appnet
 
   server:
-    build:
-      context: ../
-      dockerfile: docker/Dockerfile
+    # build:
+    #  context: ../
+    #  dockerfile: docker/Dockerfile
+    image: answerhuang/fabulove
+    container_name: docker_server
     environment:
       FABU_DB_HOST: mongo
       # FABU_BASE_URL: https://fabu.apppills.com 正式环境部署请打开注释，并修改为域名为自己的域名
       FABU_UPLOAD_DIR: /fabu/upload
-    ports: 
+    ports:
       - "9898:9898"
     volumes:
       - ./upload:/fabu/upload
@@ -34,4 +36,4 @@ networks:
       bridge
 
 
-  
+
