fix: 处理本地调试时, 环境变量问题

--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^1.4.4",
+    "@vitejs/plugin-vue": "^1.4.0",
+    "@vue/compiler-sfc": "^3.2.4",
     "sass": "^1.37.5",
     "vite": "2",
     "vite-plugin-vue2": "latest",
