fix: 临时写死一个 icon 变量

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "babel-node index.js",
     "build": "babel src -d sdist --source-maps",
     "preLaunchTask": "npm run build",
-    "debug": "babel-node index.js --inspect --debug-brk --nolazy index.js"
+    "debug": "babel-node index.js --inspect --inspect-brk --nolazy index.js"
   },
   "keywords": [
     "koa",
