--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:12.18.1
+FROM node:14
 
 # 安装依赖库
 RUN npm install -g babel-cli
-RUN npm install -g cnpm@7 --registry=https://registry.npmmirror.com
+# RUN npm install -g npm --registry=https://registry.npmmirror.com
 # 设置目录
 RUN mkdir -p /opt/data /opt/server /opt/web /opt/logs /opt/docker
 
@@ -13,13 +13,13 @@ ADD docker/docker-entrypoint.sh /opt/docker
 # 增加前端页面显示
 WORKDIR /opt/client
 ADD client /opt/client
-RUN cnpm install
+RUN npm install
 RUN npm run build
 
 # 增加server
 WORKDIR /opt/server
 ADD server /opt/server
-RUN cnpm install
+RUN npm install
 
 EXPOSE 9898
 
