--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "axios": "0.21.1",
-    "element-ui": "2.15.14",
+    "element-ui": "^2.15.14",
     "vue": "^2.6.14",
     "vue-context-menu": "^2.0.6",
     "vue-infinite-scroll": "^2.0.2",
