--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
 
   mongo:
@@ -15,10 +14,11 @@ services:
     # build:
     #  context: ../
     #  dockerfile: docker/Dockerfile
-    image: answerhuang/fabulove:latest
+    image: crpi-ybd4i5ioxjm9n86c.cn-shanghai.personal.cr.aliyuncs.com/answerhuang/fabulove:202411182216
     container_name: docker_server
     environment:
       FABU_DB_HOST: mongo
+#      FABU_BASE_URL: https://server.docker.orb.local/ #正式环境部署请打开注释，并修改为域名为自己的域名
       FABU_UPLOAD_DIR: /fabu/upload
     ports:
       - "9898:9898"
