--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "A Vue.js project",
   "author": "wutianyang <wutianyang@hd123.com>",
   "private": true,
+  "type": "module",
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
     "start": "vite --mode development",
@@ -12,37 +13,39 @@
     "build": "vite build --mode production"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "@imengyu/vue3-context-menu": "^1.4.3",
+    "@jambonn/vue-lazyload": "^1.0.10",
+    "@vitejs/plugin-vue-jsx": "^4.1.0",
+    "@vue/compat": "^3.5.13",
     "axios": "0.21.1",
-    "element-ui": "^2.15.14",
-    "vue": "^2.6.14",
-    "vue-context-menu": "^2.0.6",
+    "element-plus": "^2.8.8",
+    "mitt": "^3.0.1",
+    "vue": "^3.5.13",
     "vue-infinite-scroll": "^2.0.2",
-    "vue-lazyload": "^1.3.3",
-    "vue-qr": "^2.5.0",
-    "vue-router": "^3.5.2"
+    "vue-qr": "^4.0.9"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-proposal-function-sent": "^7.25.9",
-    "@babel/plugin-proposal-json-strings": "^7.18.6",
-    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-throw-expressions": "^7.25.9",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-export-namespace-from": "^7.25.9",
+    "@babel/plugin-transform-json-strings": "^7.25.9",
+    "@babel/plugin-transform-numeric-separator": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
     "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.26.0",
-    "@vitejs/plugin-legacy": "^1.4.4",
-    "@vitejs/plugin-vue": "^1.4.0",
+    "@vitejs/plugin-legacy": "^5.4.3",
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vue/babel-plugin-transform-vue-jsx": "^1.4.0",
-    "@vue/compiler-sfc": "^3.2.4",
+    "@vue/compiler-sfc": "^3.5.13",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "sass": "^1.49.9",
-    "vite": "2",
-    "vite-plugin-vue2": "latest",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "^1.81.0",
+    "vite": "^5.4.11",
+    "vite-plugin-vue2": "^2.0.3",
+    "vue-router": "^4.4.5"
   },
   "engines": {
     "node": ">= 6.0.0",
