--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "@jambonn/vue-lazyload": "^1.0.10",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
     "@vue/compat": "^3.5.13",
-    "axios": "0.21.1",
+    "axios": "^1.7.7",
     "element-plus": "^2.8.8",
     "mitt": "^3.0.1",
     "vue": "^3.5.13",
@@ -45,7 +45,6 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "sass": "^1.81.0",
     "vite": "^5.4.11",
-    "vite-plugin-vue2": "^2.0.3",
     "vue-router": "^4.4.5"
   },
   "engines": {
