--- a/client/package.json
+++ b/client/package.json
@@ -37,13 +37,13 @@
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.26.0",
-    "@vitejs/plugin-legacy": "^5.4.3",
     "@vitejs/plugin-vue": "^5.2.0",
     "@vue/babel-plugin-transform-vue-jsx": "^1.4.0",
     "@vue/compiler-sfc": "^3.5.13",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "sass": "^1.81.0",
+    "terser": "^5.36.0",
     "vite": "^5.4.11",
     "vue-router": "^4.4.5"
   },
