--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,12 +8,53 @@ on:
 
 jobs:
 
-  build:
+  # build:
 
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
+    # steps:
+    # - uses: actions/checkout@v4
+    # - name: Build the Docker image
       # run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-      run: docker buildx build -t fabulove:$(date +%s) --platform=linux/amd64 -f docker/Dockerfile .
+      # run: docker buildx build -t fabulove:$(date +%s) --platform=linux/amd64 -f docker/Dockerfile .
+
+  build_and_push:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    permissions:
+          packages: write
+          contents: read
+          attestations: write
+          id-token: write
+    steps:
+          - name: Check out the repo
+            uses: actions/checkout@v4
+
+          - name: Log in to Docker Hub
+            uses: docker/login-action@v2
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+
+          - name: Extract metadata (tags, labels) for Docker
+            id: meta
+            uses: docker/metadata-action@v4
+            with:
+              images: answerhuang/fabulove
+
+          - name: Build and push Docker image
+            id: push
+            uses: docker/build-push-action@v3
+            with:
+              context: .
+              file: ./docker/Dockerfile
+              push: true
+              tags: latest
+              labels: ${{ steps.meta.outputs.labels }}
+
+          # - name: Generate artifact attestation
+          #   uses: actions/attest-build-provenance@v2
+          #   with:
+          #     subject-name: answerhuang/fabulove
+          #     subject-digest: ${{ steps.push.outputs.digest }}
+          #     push-to-registry: true
